--- a/inicio/inicio.html
+++ b/inicio/inicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-<h1 class="controleTotal">CONTROLE TOTAL</h1>
+<h1 class="controleTotal">Controle Total</h1>
 <div class="tabHome">
     <img src="../src/images/sync.png" alt="" class="imgHome">
 </div>
