--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link
+      rel="shortcut icon"
+      href="/src/images/icone.ico"
+      type="image/x-icon"
+    />
     <script defer src="agenda.js"></script>
-    <title>Controle Total</title>
+    <title>Gestão Pessoal</title>
   </head>
   <body>
-    <div id="cabecalho" class="cabecalho">Cabeçalho</div>
+    <div id="cabecalho" class="cabecalho">
+      <div id="relogio" class="relogio">
+        <span id="horas">00</span>
+        <span id="minutos">00</span>
+        <span id="segundos">00</span>
+      </div>
+    </div>
     <div id="menu" class="menu">
       <button id="um" class="aba abaSelecionada">Home</button>
       <button id="dois" class="aba">Terefas</button>
