--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./estilos.css">
     <link rel="stylesheet" type="text/css" href="./tarefas.css">
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">    
 </head>
 <body id="content">  
 <h1>Minhas Tarefas</h1>
