atualização do projeto

--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -4,7 +4,9 @@
     <title>Minhas Tarefas</title>
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer="" src="./tarefas.js"></script>
+    <!-- <script defer="" src="./tarefas.js"></script> -->
+    <script defer="" src="/tarefas/tarefasExemplo.js"></script>
+    <script defer="" src="/tarefas/crud_tarefas.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./estilos.css">
     <link rel="stylesheet" type="text/css" href="./tarefas.css">
@@ -37,10 +39,10 @@
       </tr>
     </tfoot>
   </table>
-  <!-- <div id="areaGrafico">
+  <div id="areaGrafico">
     <h3>Tarefas por prioridade</h3>
     <canvas id="grafico"></canvas>
-  </div> -->
+  </div>
   <!-- Mostra os popus -->
   <div id="modalTarefa" class="modal">
     <div class="corpoModal">
