--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   </head>
   <body>
     <div id="cabecalho" class="cabecalho">
-      <div id="relogio" class="relogio">
-        <span id="horas">00</span>
-        <span id="minutos">00</span>
-        <span id="segundos">00</span>
+      <div class="logo">
+        <img class="" src="/src/images/logo.png" alt="">       
       </div>
+      <div class="meuMundo"><p >MEU MUNDO</p></div>
+
+      
     </div>
     <div id="menu" class="menu">
       <button id="um" class="aba abaSelecionada">Home</button>
