--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="cabecalho" class="cabecalho">
       <div class="logo">
-        <img class="" src="/src/images/logo.png" alt="">       
+        <img class="" src="./src/images/logo.png" alt="">       
       </div>
       <div class="meuMundo"><p >MEU MUNDO</p></div>
 
