--- a/home/home.html
+++ b/home/home.html
@@ -10,9 +10,9 @@
 <body>
     <div class="grid">
         <div class="titulo"><span>Título</span></div>    
-            <div class="graficoDiario"><span>Grafico Diário</span></div>         
+            <div class="graficoDiario"><span>Grafico Diário das Tarefas</span></div>         
             <div class="notificacoe">
-                <span>Notificações</span>
+                <span>Notificações de Prioridades Alta</span>
                 <div id="relogio" class="relogio">
                     <span id="horas">00</span>
                     <span id="minutos">00</span>
