--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- <script defer="" src="./tarefas.js"></script> -->
-    <script defer="" src="/tarefas/tarefasExemplo.js"></script>
+    <script defer="" src="tarefas/tarefasExemplo.js"></script>
     <script defer="" src="/tarefas/crud_tarefas.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./estilos.css">
