--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link
       rel="shortcut icon"
-      href="/src/images/icone.ico"
+      href="src/images/icone.ico"
       type="image/x-icon"
     />
     <script defer src="agenda.js"></script>
