--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="src/images/icone.ico"
       type="image/x-icon"
     />
-    <script defer src="agenda.js"></script>
+    <script defer src="./agenda.js"></script>
     <title>Gestão Pessoal</title>
   </head>
   <body>
