--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="principal" class="principal">
       <iframe
         name="ifPrincipal"
-        src="home/home.html"
+        src="/home/home.html"
         class="ifPrincipal"
       ></iframe>
     </div>
