--- a/home/home.html
+++ b/home/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="home.css" media="screen">
-    <script defer src="/home/home.js"></script>
+    <script defer src="home.js"></script>
     <title>Início</title>
 </head>
 <body>
