--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="logo">
         <img class="" src="./src/images/logo.png" alt="">       
       </div>
-      <div class="meuMundo"><p >MEU MUNDO</p></div>
+      <div class="meuMundo"><p >GESTÃO PESSOAL</p></div>
 
       
     </div>
