--- a/home/home.html
+++ b/home/home.html
@@ -10,10 +10,9 @@
 <body>
     <div class="grid">
         <div class="titulo"><span>Título</span></div>    
-            <div class="graficoDiario"><span>Grafico Diário das Tarefas</span>
-                
-            </div> 
-               
+            <div class="graficoDiario">
+                <span>Grafico Diário das Tarefas</span>                
+            </div>                
             <div class="notificacoe">
                 <span>Notificações de Prioridades Alta</span>
                 <div id="relogio" class="relogio">
