--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -49,7 +49,7 @@
     <div class="corpoModal">
       <header>
         <span id="fechaModal">×</span>
-        <h3>TAREFA</h3>
+        <h3>Financeiro</h3>
       </header>
       <p>
         <label for="campoDescricao">Mês: </label>
@@ -57,13 +57,17 @@
         <input type="hidden" id="campoID">
       </p>
       <p>
-        <label for="campoData">Salário Líquido: </label>
+        <label for="campoData">Salário Líq.: </label>
         <input type="text" id="campoData">
       </p>
       <p>
-        <label for="campoData">Pgtos do Mês: </label>
+        <p for="campoData">Pagamentos: </p>
+        <label for="campoData">Cartão Nubank: </label>
         <input type="text" id="campoData">
       </p>
+      <label for="campoData">Cartão Nubank: </label>
+      <input type="text" id="campoData">
+    </p>
       <p>
         <label for="campoData">Trasferir: </label>
         <input type="text" id="campoData">
