--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     </div>
     <div id="menu" class="menu">
       <button id="um" class="aba abaSelecionada">Home</button>
-      <button id="dois" class="aba">Terefas</button>
-      <button id="tres" class="aba">Anotações</button>
-      <button id="quatro" class="aba">Financeiro</button>
+      <button id="dois" class="aba">Terefas</button>      
+      <button id="quatro" class="aba">Finanças</button>
       <button id="cinco" class="aba">Gestão</button>
-      <button id="seis" class="aba">Personalizar</button>
+      <button id="tres" class="aba">Geral</button>
     </div>
     <div id="principal" class="principal">
       <iframe
