--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -57,12 +57,17 @@
         <input type="hidden" id="campoID">
       </p>
       <p>
+        <label for="campoData">Mês: </label>
+        <input type="month" id="campoData">
+        <input type="hidden" id="campoID">
+      </p>
+      <p>
         <label for="campoData">Salário Líq.: </label>
         <input type="text" id="campoData">
       </p>
       <p>
         <p for="campoData">Pagamentos: </p>
-        <label for="campoData">Cartão Nubank: </label>
+        <label for="campoData">Nubank: </label>
         <input type="text" id="campoData">
       </p>
       <label for="campoData">Cartão Nubank: </label>
