--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <button id="um" class="aba abaSelecionada">Home</button>
       <button id="dois" class="aba">Terefas</button>      
       <button id="quatro" class="aba">Finanças</button>
-      <button id="cinco" class="aba">Gestão</button>
+      <button id="cinco" class="aba">Diário</button>
       <button id="tres" class="aba">Geral</button>
     </div>
     <div id="principal" class="principal">
