--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -2,111 +2,130 @@
 <html lang="pt-br">
 <head>
     <title>Minhas Tarefas</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/cabecalhofixo.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer="" src="crud_financeiro.js"></script>
-    <script defer="" src="financeiro.js"></script>    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./estilos.css">
+    <script defer src="financeiro.js"></script>    
     <link rel="stylesheet" type="text/css" href="./financeiro.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">    
 </head>
-<body id="content">  
-<h1>Minhas Contas</h1>
-<div id="areaFiltro">
-    <label for="filtro">Busca:</label>
-    <input id="filtro" type="text">
-    <span id="limpaFiltro">x</span>
-</div>
-<table>
-    <thead>
-      <tr>
-        <th class="selecao"></th>
-        <th id="th1" class="col1">Mês</th>
-        <th id="th2" class="col2">Salário Líq.</th>
-        <th id="th3" class="col3">Pagamentos</th>
-        <th id="th4" class="col3">Trasnferir</th>
-      </tr>
-    </thead>
-    <tbody id="corpoTabela"></tbody>
-    <tfoot>
-      <tr>
-        <td colspan="4">
-          <button id="btAdicionar" class="botao">Adicionar</button>
-          <button id="btEditar" class="botao">Editar</button>
-          <button id="btExcluir" class="botao">Excluir</button>
-        </td>
-      </tr>
-    </tfoot>
-  </table>
-  <div id="areaGrafico">
-    <h3>Tarefas por prioridade</h3>
-    <canvas id="grafico"></canvas>
-  </div>
-  <!-- Mostra os popups -->
-  <div id="modalTarefa" class="modal">
-    <div class="corpoModal">
-      <div class="cabecalhoRodape">
-        <header>
-          <span id="fechaModal">×</span>
-          <h3>Contas do Mês</h3>
-        </header>
-        <p>
-          <label for="campoMes">Mês: </label>
-          <input type="month" id="campoMes">
-          <input type="hidden" id="campoID">
-        </p>
+<body id="content"> 
+    <!--CABEÇALHO - ABAS-->
+    <div class="header">
+      <div id="cabecalho" class="cabecalho">
+        <div class="logo">
+          <img class="" src="../src/images/logo.png" alt="">       
+        </div>
+        <div class="meuMundo"><p >GESTÃO PESSOAL</p></div>      
       </div>
-      <!-- <hr class="divisor"/> -->
-      <div class="modalContent">
-        <p>
-          <p for="campoData">Receitas: </p>
-          <label for="campoData">Salário Líq.: </label>
-          <input type="text" id="campoData">
-        </p>
-        <p>
-          <label for="campoData">Extra: </label>
-          <input type="text" id="campoData">
-        </p>
+      <div id="menu" class="menu">
+        <button id="um" class="aba abaSelecionada">Home</button>
+        <button id="dois" class="aba">Terefas</button>      
+        <button id="tres" class="aba">Finanças</button>
+        <button id="quatro" class="aba">Diário</button>
+        <button id="cinco" class="aba">Geral</button>
       </div>
-        <!-- <hr class="divisor"/> -->
-      <div class="modalContent">
-        <p>
-          <p for="campoData">Despesas: </p>
-          <label for="campoData">Fat. Nubank: </label>
-          <input type="text" id="campoData">
-        </p>
-        <p>
-          <label for="campoData">Fat. Inter: </label>
-          <input type="text" id="campoData">
-        </p>
-        <p>
-          <label for="campoData">Fat. C6: </label>
-          <input type="text" id="campoData">
-        </p>
-        <p>
-          <label for="campoData">Invest.: </label>
-          <input type="text" id="campoData">
-        </p>
-        <p>
-          <label for="campoData">Em dinheiro: </label>
-          <input type="text" id="campoData">
-        </p>
-      </div>
-        <!-- <hr class="divisor"/>       -->
-      <div class="cabecalhoRodape">
-        <p>
-          <label for="campoData">Sobra: </label>
-          <input type="text" id="campoData">
-        </p>  
-        <p>
-          <button id="btMTCriar">Criar</button>
-          <button id="btMTAlterar">Alterar</button>
-          <button id="btMTExcluir">Excluir</button>
-          <button id="btMTCancelar">Cancelar</button>
-        </p>
-      </div>
-    </div>
-  </div>
+    </div> 
+    <!--CONTEÚDO-->
+ <div class="principalFinanceiro">
+   <h1>Minhas Contas</h1>
+   <div id="areaFiltro">
+       <label for="filtro">Busca:</label>
+       <input id="filtro" type="text">
+       <span id="limpaFiltro">x</span>
+   </div>
+   <table>
+       <thead>
+         <tr>
+           <th class="selecao"></th>
+           <th id="th1" class="col1">Mês</th>
+           <th id="th2" class="col2">Salário Líq.</th>
+           <th id="th3" class="col3">Pagamentos</th>
+           <th id="th4" class="col3">Trasnferir</th>
+         </tr>
+       </thead>
+       <tbody id="corpoTabela"></tbody>
+       <tfoot>
+         <tr>
+           <td colspan="4">
+             <button id="btAdicionar" class="botao">Adicionar</button>
+             <button id="btEditar" class="botao">Editar</button>
+             <button id="btExcluir" class="botao">Excluir</button>
+           </td>
+         </tr>
+       </tfoot>
+     </table>
+     <div id="areaGrafico">
+       <h3>Tarefas por prioridade</h3>
+       <canvas id="grafico"></canvas>
+     </div>
+     <!-- Mostra os popups -->
+     <div id="modalTarefa" class="modal">
+       <div class="corpoModal">
+         <div class="cabecalhoRodape">
+           <header>
+             <span id="fechaModal">×</span>
+             <h3>Contas do Mês</h3>
+           </header>
+           <p>
+             <label for="campoMes">Mês: </label>
+             <input type="month" id="campoMes">
+             <input type="hidden" id="campoID">
+           </p>
+         </div>
+         <!-- <hr class="divisor"/> -->
+         <div class="modalContent">
+           <p>
+             <p for="campoData">Receitas: </p>
+             <label for="campoData">Salário Líq.: </label>
+             <input type="text" id="campoData">
+           </p>
+           <p>
+             <label for="campoData">Extra: </label>
+             <input type="text" id="campoData">
+           </p>
+         </div>
+           <!-- <hr class="divisor"/> -->
+         <div class="modalContent">
+           <p>
+             <p for="campoData">Despesas: </p>
+             <label for="campoData">Fat. Nubank: </label>
+             <input type="text" id="campoData">
+           </p>
+           <p>
+             <label for="campoData">Fat. Inter: </label>
+             <input type="text" id="campoData">
+           </p>
+           <p>
+             <label for="campoData">Fat. C6: </label>
+             <input type="text" id="campoData">
+           </p>
+           <p>
+             <label for="campoData">Invest.: </label>
+             <input type="text" id="campoData">
+           </p>
+           <p>
+             <label for="campoData">Em dinheiro: </label>
+             <input type="text" id="campoData">
+           </p>
+         </div>
+           <!-- <hr class="divisor"/>       -->
+         <div class="cabecalhoRodape">
+           <p>
+             <label for="campoData">Sobra: </label>
+             <input type="text" id="campoData">
+           </p>  
+           <p>
+             <button id="btMTCriar">Criar</button>
+             <button id="btMTAlterar">Alterar</button>
+             <button id="btMTExcluir">Excluir</button>
+             <button id="btMTCancelar">Cancelar</button>
+           </p>
+         </div>
+       </div>
+     </div>
+
+ </div>   
 </body>
 </html
