--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -3,77 +3,96 @@
 <head>
     <title>Minhas Tarefas</title>
     <meta charset="UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- <script defer="" src="./tarefas.js"></script> -->
-    <script defer="" src="crud_tarefas.js"></script>
-    <script defer="" src="tarefasExemplo.js"></script>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./estilos.css">
-    <link rel="stylesheet" type="text/css" href="./tarefas.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">    
+    <link rel="stylesheet" href="/cabecalhofixo.css"> 
+    <link rel="stylesheet" type="text/css" href="tarefas.css">     
+    <script defer="" src="tarefas.js"></script>      
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>   
 </head>
-<body id="content">  
-<h1>Minhas Tarefas</h1>
-<div id="areaFiltro">
-    <label for="filtro">Busca:</label>
-    <input id="filtro" type="text">
-    <span id="limpaFiltro">x</span>
-</div>
-<table>
-    <thead>
-      <tr>
-        <th class="selecao"></th>
-        <th id="th1" class="col1">Descrição</th>
-        <th id="th2" class="col2">Data</th>
-        <th id="th3" class="col3">Prioridade</th>
-      </tr>
-    </thead>
-    <tbody id="corpoTabela"></tbody>
-    <tfoot>
-      <tr>
-        <td colspan="4">
-          <button id="btAdicionar" class="botao">Adicionar</button>
-          <button id="btEditar" class="botao">Editar</button>
-          <button id="btExcluir" class="botao">Excluir</button>
-        </td>
-      </tr>
-    </tfoot>
-  </table>
-  <div id="areaGrafico">
-    <h3>Tarefas por prioridade</h3>
-    <canvas id="grafico"></canvas>
-  </div>
-  <!-- Mostra os popups -->
-  <div id="modalTarefa" class="modal">
-    <div class="corpoModal">
-      <header>
-        <span id="fechaModal">×</span>
-        <h3>TAREFA</h3>
-      </header>
-      <p>
-        <label for="campoDescricao">Descrição: </label>
-        <input type="text" id="campoDescricao">
-        <input type="hidden" id="campoID">
-      </p>
-      <p>
-        <label for="campoData">Data: </label>
-        <input type="date" id="campoData">
-      </p>
-      <p>
-        <label for="campoPrioridade">Prioridade: </label>
-        <select id="campoPrioridade">
-          <option value="1">Alta</option>
-          <option value="2">Média</option>
-          <option value="3">Baixa</option>
-        </select>
-      </p>
-      <p>
-        <button id="btMTCriar">Criar</button>
-        <button id="btMTAlterar">Alterar</button>
-        <button id="btMTExcluir">Excluir</button>
-        <button id="btMTCancelar">Cancelar</button>
-      </p>
+
+<body id="content">
+    <!--CABEÇALHO - ABAS-->
+    <div class="header">
+      <div id="cabecalho" class="cabecalho">
+        <div class="logo">
+          <img class="" src="../src/images/logo.png" alt="">       
+        </div>
+        <div class="meuMundo"><p >GESTÃO PESSOAL</p></div>      
+      </div>
+      <div id="menu" class="menu">
+        <button id="um" class="aba abaSelecionada">Home</button>
+        <button id="dois" class="aba">Terefas</button>      
+        <button id="tres" class="aba">Finanças</button>
+        <button id="quatro" class="aba">Diário</button>
+        <button id="cinco" class="aba">Geral</button>
+      </div>
     </div>
+  <!--CONTEÚDO--> 
+  <div class="principalTarefa">
+    <h1>Minhas Tarefas</h1>
+    <div id="areaFiltro">
+        <label for="filtro">Busca:</label>
+        <input id="filtro" type="text">
+        <span id="limpaFiltro">x</span>
+    </div>
+    <table>
+        <thead>
+          <tr>
+            <th class="selecao"></th>
+            <th id="th1" class="col1">Descrição</th>
+            <th id="th2" class="col2">Data</th>
+            <th id="th3" class="col3">Prioridade</th>
+          </tr>
+        </thead>
+        <tbody id="corpoTabela"></tbody>
+        <tfoot>
+          <tr>
+            <td colspan="4">
+              <button id="btAdicionar" class="botao">Adicionar</button>
+              <button id="btEditar" class="botao">Editar</button>
+              <button id="btExcluir" class="botao">Excluir</button>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+      <div id="areaGrafico">
+        <h3>Tarefas por prioridade</h3>
+        <canvas id="grafico"></canvas>
+      </div>
+      <!-- Mostra os popups -->
+      <div id="modalTarefa" class="modal">
+        <div class="corpoModal">
+          <header>
+            <span id="fechaModal">×</span>
+            <h3>TAREFA</h3>
+          </header>
+          <p>
+            <label for="campoDescricao">Descrição: </label>
+            <input type="text" id="campoDescricao">
+            <input type="hidden" id="campoID">
+          </p>
+          <p>
+            <label for="campoData">Data: </label>
+            <input type="date" id="campoData">
+          </p>
+          <p>
+            <label for="campoPrioridade">Prioridade: </label>
+            <select id="campoPrioridade">
+              <option value="1">Alta</option>
+              <option value="2">Média</option>
+              <option value="3">Baixa</option>
+            </select>
+          </p>
+          <p>
+            <button id="btMTCriar">Criar</button>
+            <button id="btMTAlterar">Alterar</button>
+            <button id="btMTExcluir">Excluir</button>
+            <button id="btMTCancelar">Cancelar</button>
+          </p>
+        </div>
+      </div>
+
   </div>
 </body>
 </html
