--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -20,9 +20,9 @@
         <div class="meuMundo"><p >GESTÃO PESSOAL</p></div>      
       </div>
       <div id="menu" class="menu">
-        <button id="um" class="aba abaSelecionada">Home</button>
+        <button id="um" class="aba">Home</button>
         <button id="dois" class="aba">Terefas</button>      
-        <button id="tres" class="aba">Finanças</button>
+        <button id="tres" class="abaSelecionada">Finanças</button>
         <button id="quatro" class="aba">Diário</button>
         <button id="cinco" class="aba">Geral</button>
       </div>
@@ -117,10 +117,10 @@
              <input type="text" id="campoData">
            </p>  
            <p>
-             <button id="btMTCriar">Criar</button>
-             <button id="btMTAlterar">Alterar</button>
-             <button id="btMTExcluir">Excluir</button>
-             <button id="btMTCancelar">Cancelar</button>
+             <button id="btMTCriar" class="botao">Criar</button>
+             <button id="btMTAlterar" class="botao">Alterar</button>
+             <button id="btMTExcluir" class="botao">Excluir</button>
+             <button id="btMTCancelar" class="botao">Cancelar</button>
            </p>
          </div>
        </div>
