--- a/geral/geral.html
+++ b/geral/geral.html
@@ -19,11 +19,11 @@
           <div class="meuMundo"><p >GESTÃO PESSOAL</p></div>      
         </div>
         <div id="menu" class="menu">
-          <button id="um" class="aba abaSelecionada">Home</button>
+          <button id="um" class="aba">Home</button>
           <button id="dois" class="aba">Terefas</button>      
           <button id="tres" class="aba">Finanças</button>
           <button id="quatro" class="aba">Diário</button>
-          <button id="cinco" class="aba">Geral</button>
+          <button id="cinco" class="abaSelecionada">Geral</button>
         </div>
     </div> 
       <!--CONTEÚDO-->
