--- a/home/index.html
+++ b/home/index.html
@@ -19,7 +19,7 @@
         <div class="meuMundo"><p >GESTÃO PESSOAL</p></div>      
       </div>
       <div id="menu" class="menu">
-        <button id="um" class="aba abaSelecionada">Home</button>
+        <button id="um" class="abaSelecionada">Home</button>
         <button id="dois" class="aba">Terefas</button>      
         <button id="tres" class="aba">Finanças</button>
         <button id="quatro" class="aba">Diário</button>
