--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -21,8 +21,8 @@
         <div class="meuMundo"><p >GESTÃO PESSOAL</p></div>      
       </div>
       <div id="menu" class="menu">
-        <button id="um" class="aba abaSelecionada">Home</button>
-        <button id="dois" class="aba">Terefas</button>      
+        <button id="um" class="aba">Home</button>
+        <button id="dois" class="abaSelecionada">Terefas</button>      
         <button id="tres" class="aba">Finanças</button>
         <button id="quatro" class="aba">Diário</button>
         <button id="cinco" class="aba">Geral</button>
@@ -85,10 +85,10 @@
             </select>
           </p>
           <p>
-            <button id="btMTCriar">Criar</button>
-            <button id="btMTAlterar">Alterar</button>
-            <button id="btMTExcluir">Excluir</button>
-            <button id="btMTCancelar">Cancelar</button>
+            <button id="btMTCriar" class="botao">Criar</button>
+            <button id="btMTAlterar" class="botao">Alterar</button>
+            <button id="btMTExcluir" class="botao">Excluir</button>
+            <button id="btMTCancelar" class="botao">Cancelar</button>
           </p>
         </div>
       </div>
