--- a/diario/diario.html
+++ b/diario/diario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/cabecalhofixo.css">
+    <link rel="stylesheet" href="../cabecalhofixo.css">
     <link rel="stylesheet" type="text/css" href="diario.css">
     <script defer src="diario.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> 
