--- a/home/index.html
+++ b/home/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/cabecalhofixo.css">
+    <link rel="stylesheet" href="../cabecalhofixo.css">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <link rel="shortcut icon" href="/src/images/icone.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="../src/images/icone.ico" type="image/x-icon"/>
     <script defer src="gestaoP.js"></script>
     <title>Gestão Pessoal</title>
   </head>
