--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -4,7 +4,7 @@
     <title>Minhas Tarefas</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/cabecalhofixo.css"> 
+    <link rel="stylesheet" href="../cabecalhofixo.css"> 
     <link rel="stylesheet" type="text/css" href="tarefas.css">     
     <script defer="" src="tarefas.js"></script>      
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
