--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../cabecalhofixo.css">
+    <link rel="stylesheet" href="../responsividade.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script defer src="financeiro.js"></script>    
     <link rel="stylesheet" type="text/css" href="./financeiro.css">
