--- a/geral/geral.html
+++ b/geral/geral.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../cabecalhofixo.css">
+    <link rel="stylesheet" href="../responsividade.css">
     <link rel="stylesheet" href="geral.css">
     <script defer src="geral.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> 
