--- a/home/index.html
+++ b/home/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../cabecalhofixo.css">
+    <link rel="stylesheet" href="../responsividade.css">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link rel="shortcut icon" href="../src/images/icone.ico" type="image/x-icon"/>
     <script defer src="gestaoP.js"></script>
