--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../cabecalhofixo.css"> 
+    <!-- <link rel="stylesheet" href="../responsividade.css"> -->
     <link rel="stylesheet" type="text/css" href="tarefas.css">     
     <script defer="" src="tarefas.js"></script>      
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
