--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -57,10 +57,10 @@
           </tr>
         </tfoot>
       </table>
-      <div id="areaGrafico">
+      <!-- <div id="areaGrafico">
         <h3>Tarefas por prioridade</h3>
         <canvas id="grafico"></canvas>
-      </div>
+      </div> -->
       <!-- Mostra os popups -->
       <div id="modalTarefa" class="modal">
         <div class="corpoModal">
