--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -68,6 +68,7 @@
            <header>
              <span id="fechaModal">×</span>
              <h3>Contas do Mês</h3>
+             <a href="https://docs.google.com/spreadsheets/d/1SZx4ZTuHSlevFCbXMKxY73Savz8dUUo2/edit#gid=1449836066">PLANILHA DO CASAL</a>
            </header>
            <p>
              <label for="campoMes" class="mes">Mês: </label>
@@ -78,44 +79,44 @@
          <!-- <hr class="divisor"/> -->
          <div class="modalContent">
            <p>
-             <p class="receitaDespesa" for="campoData">Receitas: </p>
-             <label for="campoData">Salário Líq.: </label>
-             <input type="text" id="campoData">
+             <p class="receitaDespesa" for="campoSal">Receitas: </p>
+             <label for="campoSal">Salário Líq.: </label>
+             <input type="text" id="campoSal">
            </p>
            <p>
-             <label for="campoData">Extra: </label>
-             <input type="text" id="campoData">
+             <label for="campoExtra">Extra: </label>
+             <input type="text" id="campoSal">
            </p>
          </div>
            <!-- <hr class="divisor"/> -->
          <div class="modalContent">
            <p>
-             <p class="receitaDespesa" for="campoData">Despesas: </p>
-             <label for="campoData">Fat. Nubank: </label>
-             <input type="text" id="campoData">
+             <p class="receitaDespesa" for="campoSal">Despesas: </p>
+             <label for="campoNu">Fat. Nubank: </label>
+             <input type="text" id="campoSal">
            </p>
            <p>
-             <label for="campoData">Fat. Inter: </label>
-             <input type="text" id="campoData">
+             <label for="campoInter">Fat. Inter: </label>
+             <input type="text" id="campoSal">
            </p>
            <p>
-             <label for="campoData">Fat. C6: </label>
-             <input type="text" id="campoData">
+             <label for="campoC6">Fat. C6: </label>
+             <input type="text" id="campoSal">
            </p>
            <p>
-             <label for="campoData">Invest.: </label>
-             <input type="text" id="campoData">
+             <label for="campoInvest">Invest.: </label>
+             <input type="text" id="campoSal">
            </p>
            <p>
-             <label for="campoData">Em dinheiro: </label>
-             <input type="text" id="campoData">
+             <label for="campoDinheiro">Em dinheiro: </label>
+             <input type="text" id="campoSal">
            </p>
          </div>
            <!-- <hr class="divisor"/>       -->
          <div class="cabecalhoRodape">
            <p>
-             <label class="receitaDespesa" for="campoData">Sobra: </label>
-             <input type="text" id="campoData">
+             <label class="receitaDespesa" for="campoSobra">Sobra: </label>
+             <input type="text" id="campoSal">
            </p>  
            <p>
              <button id="btMTCriar" class="botao">Criar</button>
