--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -68,7 +68,7 @@
            <header>
              <span id="fechaModal">×</span>
              <h3>Contas do Mês</h3>
-             <a href="https://docs.google.com/spreadsheets/d/1SZx4ZTuHSlevFCbXMKxY73Savz8dUUo2/edit#gid=1449836066">PLANILHA DO CASAL</a>
+             <p> Consulte a <a href="https://docs.google.com/spreadsheets/d/1SZx4ZTuHSlevFCbXMKxY73Savz8dUUo2/edit#gid=1449836066" target="_blank"><span class="link">Planilha do Casal</span></a>.</p>
            </header>
            <p>
              <label for="campoMes" class="mes">Mês: </label>
@@ -81,11 +81,11 @@
            <p>
              <p class="receitaDespesa" for="campoSal">Receitas: </p>
              <label for="campoSal">Salário Líq.: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoSal" value="">
            </p>
            <p>
              <label for="campoExtra">Extra: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoExtra" value="">
            </p>
          </div>
            <!-- <hr class="divisor"/> -->
@@ -93,30 +93,30 @@
            <p>
              <p class="receitaDespesa" for="campoSal">Despesas: </p>
              <label for="campoNu">Fat. Nubank: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoNu" value="">
            </p>
            <p>
              <label for="campoInter">Fat. Inter: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoInter" value="">
            </p>
            <p>
              <label for="campoC6">Fat. C6: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoC6" value="">
            </p>
            <p>
              <label for="campoInvest">Invest.: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoInvest" value="">
            </p>
            <p>
              <label for="campoDinheiro">Em dinheiro: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoDinheiro" value="">
            </p>
          </div>
            <!-- <hr class="divisor"/>       -->
          <div class="cabecalhoRodape">
            <p>
              <label class="receitaDespesa" for="campoSobra">Sobra: </label>
-             <input type="text" id="campoSal">
+             <input type="number" id="campoSobra" value="">
            </p>  
            <p>
              <button id="btMTCriar" class="botao">Criar</button>
