--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -69,7 +69,7 @@
             <h3>TAREFA</h3>
           </header>
           <p>
-            <label for="campoDescricao">Descrição: </label>
+            <label for="campoDescricaoadsfsa">Descrição: </label>
             <input type="text" id="campoDescricao">
             <input type="hidden" id="campoID">
           </p>
