--- a/home/index.html
+++ b/home/index.html
@@ -24,7 +24,7 @@
         <button id="dois" class="aba">Terefas</button>      
         <button id="tres" class="aba">Finanças</button>
         <button id="quatro" class="aba">Diário</button>
-        <button id="cinco" class="aba">Geral</button>
+        <!-- <button id="cinco" class="aba">Geral</button> -->
       </div>
     </div>
     <!-- CONTEÚDO - IFRAME -->
