--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -26,7 +26,7 @@
         <button id="dois" class="abaSelecionada">Terefas</button>      
         <button id="tres" class="aba">Finanças</button>
         <button id="quatro" class="aba">Diário</button>
-        <button id="cinco" class="aba">Geral</button>
+        <!-- <button id="cinco" class="aba">Geral</button> -->
       </div>
     </div>
   <!--CONTEÚDO--> 
@@ -69,7 +69,7 @@
             <h3>TAREFA</h3>
           </header>
           <p>
-            <label for="campoDescricaoadsfsa">Descrição: </label>
+            <label for="campoDescricao">Descrição: </label>
             <input type="text" id="campoDescricao">
             <input type="hidden" id="campoID">
           </p>
