--- a/diario/diario.html
+++ b/diario/diario.html
@@ -24,7 +24,7 @@
           <button id="dois" class="aba">Terefas</button>      
           <button id="tres" class="aba">Finanças</button>
           <button id="quatro" class="abaSelecionada">Diário</button>
-          <button id="cinco" class="aba">Geral</button>
+          <!-- <button id="cinco" class="aba">Geral</button> -->
         </div>
       </div> 
       <!--CONTEÚDO-->
