--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -25,7 +25,7 @@
         <button id="dois" class="aba">Terefas</button>      
         <button id="tres" class="abaSelecionada">Finanças</button>
         <button id="quatro" class="aba">Diário</button>
-        <button id="cinco" class="aba">Geral</button>
+        <!-- <button id="cinco" class="aba">Geral</button> -->
       </div>
     </div> 
     <!--CONTEÚDO-->
@@ -43,7 +43,7 @@
            <th id="th1" class="col1">Mês</th>
            <th id="th2" class="col2">Salário Líq.</th>
            <th id="th3" class="col3">Pagamentos</th>
-           <th id="th4" class="col3">Sobra</th>
+           <th id="th4" class="col4">Sobra</th>
          </tr>
        </thead>
        <tbody id="corpoTabela"></tbody>
