--- a/financeiro/financeiro.html
+++ b/financeiro/financeiro.html
@@ -36,20 +36,20 @@
        <input id="filtro" type="text">
        <span id="limpaFiltro">x</span>
    </div>
-   <table>
+   <table class="tabela">
        <thead>
          <tr>
            <th class="selecao"></th>
-           <th id="th1" class="col1">Mês</th>
-           <th id="th2" class="col2">Salário Líq.</th>
-           <th id="th3" class="col3">Pagamentos</th>
-           <th id="th4" class="col4">Sobra</th>
+           <th id="th1" class="col2">Mês</th>
+           <th id="th2" class="col3">Salário Líq.</th>
+           <th id="th3" class="col4">Pagamentos</th>
+           <th id="th4" class="col5">Sobra</th>
          </tr>
        </thead>
        <tbody id="corpoTabela"></tbody>
        <tfoot>
          <tr>
-           <td colspan="4">
+           <td colspan="5">
              <button id="btAdicionar" class="botao">Adicionar</button>
              <button id="btEditar" class="botao">Editar</button>
              <button id="btExcluir" class="botao">Excluir</button>
